# Pruefungslesitung-4

./: .coverage  CLI.py  Persistenzmodul 1.0 – Bürgerregister speichern und laden_Haqani.docx  README.md  people.json  pyproject.toml
src/buergerregister/: register.py  validation.py
src/buergerregister/GUI/: main_gui.py
tests/: test_persistance.py
