[project]

name = "buergerregister"
version = "0.1.0"
description = "Mini-Verwaltungsanwendung zur Bürgerverwaltung"
authors = [{ name = "Vorname Nachname" }]
requires-python = ">=3.10"

## **Hinzugefügt aufgrund der Fehlermeldungen in Github**
[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = "CLI.py"

[tool.isort]
profile = "black"
skip = "CLI.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F821"]
exclude = ["CLI.py"]



[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings -q"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/buergerregister"]

[tool.coverage.report]
show_missing = true
skip_empty = true



